fixed overflow image footer

--- a/src/app/components/dropdownjogos/dropdownjogos.component.css
+++ b/src/app/components/dropdownjogos/dropdownjogos.component.css
@@ -95,6 +95,10 @@ section {
   .container {
     padding: 0 30px 30px;
   }
+
+  footer {
+    overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 1020px) {
